# openmj

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/workflows/: cmake.yml  cmake12.yml  debug.yml  discord.yml  release.yml
discord/: README.md  main.py  setup.py  test.py
discord/assets/: help.txt
discord/cc/: core.cc  test.cc
example/: gui.cc  sample.mj.yaml  tthread.cc
src/core/adt/: adv_array.hpp  common.hpp  count_map.hpp  itertools.hpp  vector.hpp
src/core/engine/: app.cc  app.hpp  geometry.hpp  gui.cc  gui.hpp  hand.cc  hand.hpp  layerstack.cc  layerstack.hpp  texture.cc  texture.hpp  window.cc  window.hpp
src/core/io/: yaml.cc  yaml.hpp  yaml_data.hpp
src/core/mahjong/: base.hpp  compact_helpers.hpp  constants.hpp  game.hpp  hand.cc  hand.hpp  mahjong.cc  mahjong.hpp  mahjong_base.hpp  mahjong_hand.cc  mahjong_hand.hpp  rng.hpp  scoring.cc  scoring.hpp  scoring_base.hpp  scoring_impl.hpp
src/core/utils/: logging.hpp  mp_wrapper.hpp  stack_allocator.hpp
src/cuda/: vector.hpp
src/pch/: cpu.hpp  gpu.hpp  pch.hpp
src/sims/: riichi.cc  riichi.hpp  riichi_app.cc  selector.cc  selector.hpp
test/: bench.cc  bench_thread.cc  test.hpp
test/core/io/: yaml.cc
test/core/io/in_files/: riichi_test.mj.yaml
test/core/mahjong/: hand.cc  meld.cc  rng.cc  scoring.cc  scoring_closed.cc  scoring_open.cc  tile.cc
test/core/utils/: stack_allocator.cc
test/cuda/: vector.cc  vector.cu
test/sims/: riichi.cc
